--- a/client-report/index.html
+++ b/client-report/index.html
@@ -1,14 +1,14 @@
 <!-- Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
   <title>pol.is report</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
-  <style type="text/css">
+  <style type='text/css'>
     /*begin http://bl.ocks.org/jensgrubert/7789216 */
     .box {
       font: 10px sans-serif;
@@ -23,7 +23,7 @@
     }
 
     .box .center {
-      stroke-dasharray: 3,3;
+      stroke-dasharray: 3, 3;
     }
 
     .box .outlier {
@@ -37,16 +37,17 @@
 
     .axis path,
     .axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
+      fill: none;
+      stroke: #000;
+      shape-rendering: crispEdges;
     }
 
     .x.axis path {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
+      fill: none;
+      stroke: #000;
+      shape-rendering: crispEdges;
     }
+
     /*end  http://bl.ocks.org/jensgrubert/7789216 */
 
     html, p, div, input, button {
@@ -56,30 +57,33 @@
     }
 
     @media print {
-        .move-left-20-for-print {
-          margin-inline-start: -20px;
-        }
-        .shrink-for-print-70 {
-          transform: scale(0.7);
-        }
-        .shrink-for-print-50 {
-          transform: scale(0.5);
-        }
+      .move-left-20-for-print {
+        margin-inline-start: -20px;
+      }
+
+      .shrink-for-print-70 {
+        transform: scale(0.7);
+      }
+
+      .shrink-for-print-50 {
+        transform: scale(0.5);
+      }
     }
 
   </style>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel='stylesheet'
+        href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'>
+  <link rel='icon' href='/favicon.ico' type='image/x-icon'>
 </head>
 
-<body class="viewport">
-  <div id='root'>
-  </div>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-  <script src="/dist/report_bundle.js"></script>
-  <script>window.version = "NULL_VERSION";</script>
+<body class='viewport'>
+<div id='root'>
+</div>
+<script src='https://d3js.org/d3.v4.min.js'></script>
+<script src='https://d3js.org/d3-scale-chromatic.v1.min.js'></script>
+<script src='/dist/report_bundle.js'></script>
+<script>window.version = 'NULL_VERSION';</script>
 
 </body>
 
